fixing view height on safari mobile

--- a/assets/landing-hv.css
+++ b/assets/landing-hv.css
@@ -9,6 +9,8 @@
    --max-width:600px;
    --max-height:600px;
 
+   --vh: 1vh;
+
    @media screen and (max-width: 375px) {
       --height:calc(100vh - 125px);
    }
@@ -64,7 +66,8 @@ h2{
    margin:0 auto;
    padding:0;
    width:100%; 
-   height:100vh;
+   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+   height: calc(var(--vh, 1vh) * 100);
    z-index:1;
 }
 
